test/corpus/additional_syntax.txt
================================================================================
Regex glob - standalone
================================================================================

`.*\.py$`

---

(module
  (expression_statement
    (xonsh_expression
      (regex_glob
        pattern: (regex_glob_content)))))

================================================================================
Formatted glob
================================================================================

f`*.txt`

---

(module
  (expression_statement
    (xonsh_expression
      (formatted_glob
        pattern: (formatted_glob_content)))))

================================================================================
Standard glob - g prefix
================================================================================

g`**/*.py`

---

(module
  (expression_statement
    (xonsh_expression
      (glob_pattern
        pattern: (glob_pattern_content)))))

================================================================================
Path literal - p prefix
================================================================================

p"/home/user"

---

(module
  (expression_statement
    (xonsh_expression
      (path_string
        prefix: (path_prefix)
        string: (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Path literal - pf prefix (formatted)
================================================================================

pf"/home/{user}"

---

(module
  (expression_statement
    (xonsh_expression
      (path_string
        prefix: (path_prefix)
        string: (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Path literal - pr prefix (raw)
================================================================================

pr"$HOME/path"

---

(module
  (expression_statement
    (xonsh_expression
      (path_string
        prefix: (path_prefix)
        string: (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Help expression - single question mark
================================================================================

int?

---

(module
  (xonsh_statement
    (help_expression
      expression: (identifier))))

================================================================================
Super help expression - double question mark
================================================================================

print??

---

(module
  (xonsh_statement
    (super_help_expression
      expression: (identifier))))

================================================================================
Help expression - shell command (ls?)
================================================================================

ls?

---

(module
  (xonsh_statement
    (help_expression
      expression: (identifier))))

================================================================================
Super help expression - shell command (echo??)
================================================================================

echo??

---

(module
  (xonsh_statement
    (super_help_expression
      expression: (identifier))))

================================================================================
Background command
================================================================================

$(sleep 10) &

---

(module
  (expression_statement
    (xonsh_expression
      (background_command
        (captured_subprocess
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word))
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Subprocess with append redirect
================================================================================

$(echo hi >> log.txt)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (subprocess_redirect
                operator: (redirect_operator)
                target: (redirect_target
                  (subprocess_word))))))))))

================================================================================
Subprocess with combined redirect &>
================================================================================

$(cmd &> all.log)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (subprocess_redirect
                operator: (redirect_operator)
                target: (redirect_target
                  (subprocess_word))))))))))

================================================================================
Subprocess with all> redirect
================================================================================

$(cmd all> combined.txt)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (subprocess_redirect
                operator: (redirect_operator)
                target: (redirect_target
                  (subprocess_word))))))))))

================================================================================
Subprocess with stdin redirect
================================================================================

$(cat < input.txt)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (subprocess_redirect
                operator: (redirect_operator)
                target: (redirect_target
                  (subprocess_word))))))))))

================================================================================
Environment variable - ARG style
================================================================================

$ARG1

---

(module
  (expression_statement
    (xonsh_expression
      (env_variable
        (identifier)))))

================================================================================
Environment variable - ARGS
================================================================================

$ARGS

---

(module
  (expression_statement
    (xonsh_expression
      (env_variable
        (identifier)))))

================================================================================
At object - import shorthand
================================================================================

@.imp

---

(module
  (expression_statement
    (xonsh_expression
      (at_object
        attribute: (identifier)))))

================================================================================
Subprocess with pipe to stderr merge
================================================================================

$(cmd a| cat)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word)))
          (subprocess_pipeline
            (pipe_operator)
            (subprocess_command
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Nested subprocess
================================================================================

$(echo $(pwd))

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (captured_subprocess
                body: (subprocess_body
                  (subprocess_command
                    (subprocess_argument
                      (subprocess_word))))))))))))

================================================================================
Multiple Python evaluations in subprocess
================================================================================

$(echo @(x) @(y))

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument
              (subprocess_word))
            (subprocess_argument
              (python_evaluation
                expression: (identifier)))
            (subprocess_argument
              (python_evaluation
                expression: (identifier)))))))))

================================================================================
Complex braced env variable
================================================================================

${'HOME' + '_DIR'}

---

(module
  (expression_statement
    (xonsh_expression
      (env_variable_braced
        expression: (binary_operator
          left: (string
            (string_start)
            (string_content)
            (string_end))
          right: (string
            (string_start)
            (string_content)
            (string_end)))))))

================================================================================
Method call on env variable
================================================================================

$PATH.append('/tmp')

---

(module
  (expression_statement
    (call
      function: (attribute
        object: (xonsh_expression
          (env_variable
            (identifier)))
        attribute: (identifier))
      arguments: (argument_list
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Subprocess logical AND at Python level
================================================================================

![cmd1] && ![cmd2]

---

(module
  (expression_statement
    (boolean_operator
      left: (xonsh_expression
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word))))))
      right: (xonsh_expression
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Subprocess logical OR at Python level
================================================================================

![cmd1] || ![cmd2]

---

(module
  (expression_statement
    (boolean_operator
      left: (xonsh_expression
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word))))))
      right: (xonsh_expression
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Background command vs logical AND disambiguation
================================================================================

![cmd] &

---

(module
  (expression_statement
    (xonsh_expression
      (background_command
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Chained subprocess logical operators at Python level
================================================================================

![cmd1] && ![cmd2] || ![cmd3]

---

(module
  (expression_statement
    (boolean_operator
      left: (boolean_operator
        left: (xonsh_expression
          (uncaptured_subprocess_object
            body: (subprocess_body
              (subprocess_command
                (subprocess_argument
                  (subprocess_word))))))
        right: (xonsh_expression
          (uncaptured_subprocess_object
            body: (subprocess_body
              (subprocess_command
                (subprocess_argument
                  (subprocess_word)))))))
      right: (xonsh_expression
        (uncaptured_subprocess_object
          body: (subprocess_body
            (subprocess_command
              (subprocess_argument
                (subprocess_word)))))))))

================================================================================
Subprocess logical 'and' keyword
================================================================================

$(cmd1 and cmd2)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command (subprocess_argument (subprocess_word)))
          (subprocess_logical
            operator: (logical_operator)
            (subprocess_command (subprocess_argument (subprocess_word)))))))))

================================================================================
Subprocess logical 'or' keyword
================================================================================

$(cmd1 or cmd2)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command (subprocess_argument (subprocess_word)))
          (subprocess_logical
            operator: (logical_operator)
            (subprocess_command (subprocess_argument (subprocess_word)))))))))

================================================================================
Regex glob in assignment
================================================================================

x = `pattern`

---

(module
  (expression_statement
    (assignment
      left: (identifier)
      right: (xonsh_expression (regex_glob pattern: (regex_glob_content))))))

================================================================================
Glob pattern in assignment
================================================================================

x = g`*.txt`

---

(module
  (expression_statement
    (assignment
      left: (identifier)
      right: (xonsh_expression (glob_pattern pattern: (glob_pattern_content))))))

================================================================================
Env variable in f-string interpolation
================================================================================

f"Home is {$HOME}"

---

(module
  (expression_statement
    (string
      (string_start)
      (string_content)
      (interpolation expression: (xonsh_expression (env_variable (identifier))))
      (string_end))))

================================================================================
Custom function glob
================================================================================

@foo`pattern`

---

(module
  (expression_statement
    (xonsh_expression
      (custom_function_glob
        function: (identifier)
        pattern: (custom_glob_content)))))

================================================================================
Custom function glob - empty pattern
================================================================================

@foo``

---

(module
  (expression_statement
    (xonsh_expression
      (custom_function_glob
        function: (identifier)
        pattern: (custom_glob_content)))))

================================================================================
Custom function glob in subprocess
================================================================================

$(ls @foo`*.py`)

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument (subprocess_word))
            (subprocess_argument
              (custom_function_glob
                function: (identifier)
                pattern: (custom_glob_content)))))))))

================================================================================
Brace expansion - range
================================================================================

echo {1..5}

---

(module
  (bare_subprocess
    body: (subprocess_body
      (subprocess_command
        (subprocess_argument (subprocess_word))
        (subprocess_argument
          (brace_expansion (brace_range)))))))

================================================================================
Brace expansion - letter range
================================================================================

echo {a..z}

---

(module
  (bare_subprocess
    body: (subprocess_body
      (subprocess_command
        (subprocess_argument (subprocess_word))
        (subprocess_argument
          (brace_expansion (brace_range)))))))

================================================================================
Brace expansion - list
================================================================================

mkdir {foo,bar,baz}

---

(module
  (bare_subprocess
    body: (subprocess_body
      (subprocess_command
        (subprocess_argument (subprocess_word))
        (subprocess_argument
          (brace_expansion
            (brace_item)
            (brace_item)
            (brace_item)))))))

================================================================================
Brace expansion - two items list
================================================================================

touch {a,b}

---

(module
  (bare_subprocess
    body: (subprocess_body
      (subprocess_command
        (subprocess_argument (subprocess_word))
        (subprocess_argument
          (brace_expansion
            (brace_item)
            (brace_item)))))))

================================================================================
Brace expansion in captured subprocess
================================================================================

$(echo {1..3})

---

(module
  (expression_statement
    (xonsh_expression
      (captured_subprocess
        body: (subprocess_body
          (subprocess_command
            (subprocess_argument (subprocess_word))
            (subprocess_argument
              (brace_expansion (brace_range)))))))))

================================================================================
Python set literal - not brace expansion
================================================================================

x = {1, 2, 3}

---

(module
  (expression_statement
    (assignment
      left: (identifier)
      right: (set
        (integer)
        (integer)
        (integer)))))
